# data-analysis-agent

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
benchmark_tasks/cross_study_biomarker_harmonization_small/: README.md
benchmark_tasks/longitudinal_treatment_response/: README_INTEGRATION.md
docs/: cross_study_biomarker_demo.md  distributed_spec_demo.md  live_g1_debug_log.md
docs/graphs/: agent_workflow.mmd
examples/: verifier_cases.json
scripts/: build_adaptive_biomarker_tasks.py  build_cross_study_biomarker_task.py  build_distributed_longitudinal_task.py  check_nebius_api.py  export_graph.py
tests/: conftest.py  test_adaptive_biomarker_release.py  test_benchmark.py  test_benchmark_partial_smoke.py  test_benchmark_progress.py  test_candidate_consistency.py  test_config.py  test_context_isolation.py  test_cross_study_biomarker_harmonization_small.py  test_cross_study_biomarker_task.py  test_demo.py  test_distributed_longitudinal_task.py  test_effective_specification_contract.py  test_evaluation.py  test_full_agent_reliability.py  test_generated_code_contract.py  test_goal_artifact_handoff.py  test_goal_execution.py  test_graph.py  test_graph_export.py  test_longitudinal_g1_integration.py  test_mechanical_repair.py  test_nebius_client.py  test_output_validation.py  test_planner_repair.py  test_prompt_variants.py  test_public_analysis_context.py  test_python_runner.py  test_routing.py  test_single_agent_checker.py  test_structured_python_generation.py  test_studio_inputs.py  test_trusted_tools.py
(+120 files in other folders)
